fixed issue where clicking styles were trigging the parent onclick

--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,9 @@
                     optGroup.click(() => {
                         optGroup.children("option").prop("selected", "selected");
                     });
+                    optGroup.children("option").click(function(e) {
+                        e.stopPropagation();
+                   });
                     $('#StylesDropdown').append(optGroup);
                 });
             });
