--- a/static/recommendations.html
+++ b/static/recommendations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Beer Recommendations</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="jquery-3.2.1.js"></script>
     <style>
         .modal {
             display: none; /* Hidden by default */
