--- a/static/login.html
+++ b/static/login.html
@@ -65,7 +65,7 @@ span.psw {
 
 <h2>Beer Recommender Login</h2>
 
-<form action='file:///Users/taliahicks/Desktop/Databases/Project/CS6400-Project/static/index.html'> <!-- update index path-->
+<form action='http://localhost:8080/static/index.html'>
 
   <div class="imgcontainer">
     <img src="beer.png" alt="Avatar" class="avatar">
@@ -90,7 +90,7 @@ span.psw {
 
 <script>
 function myFunction() {
-    window.open('file:///Users/taliahicks/Desktop/Databases/Project/CS6400-Project/registration.html');
+    window.open('registration.html');
 }
 </script>
 
