fixed typos, updated indexz

--- a/static/registration.html
+++ b/static/registration.html
@@ -97,7 +97,7 @@ $(document).ready(function() {
         'username': $("#usernameTextBox").val(),
         'password': $("#passwordTextBox").val()
       }),
-      success: funtion(go_to_recommender)
+      success: function(go_to_recommender)
     });
   })
 });
