--- a/static/registration.html
+++ b/static/registration.html
@@ -61,10 +61,10 @@ button {
 
   <div class="container">
     <label><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="username" required>
+    <input type="text" id="usernameTextBox" placeholder="Enter Username" name="username" required>
 
     <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" id="passwordTextBox" placeholder="Enter Password" name="psw" required>
 
     <label><b>Repeat Password</b></label>
     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
@@ -93,17 +93,18 @@ function go_to_recommender() {
 <script>
 $(document).ready(function() {
     $("#register").click(function() {
+    var data = JSON.stringify(
+        {
+        username: $("#usernameTextBox").val(),
+        password: $("#passwordTextBox").val()
+      });
   $.ajax (
     {
       url:"/addUser",
       method: "POST",
       contentType: "application/json",
 
-      data: JSON.stringify(
-        {
-        'username': $("#usernameTextBox").val(),
-        'password': $("#passwordTextBox").val()
-      }),
+      data: data,
       success: go_to_recommender
     });
   })
